Bug 646901 - add error checking to fix crash in nsMsgXFVirtualFolderDBView::OnSearchHit(). r=jorgk

dbToUse was null