mailnews/base/src/nsMsgXFVirtualFolderDBView.cpp
@@ -280,10 +280,6 @@ nsMsgXFVirtualFolderDBView::OnSearchHit(nsIMsgDBHdr* aMsgHdr,
   NS_ENSURE_ARG(aMsgHdr);
   NS_ENSURE_ARG(aFolder);
 
-  nsCOMPtr<nsIMsgDatabase> dbToUse;
-  nsCOMPtr<nsIDBFolderInfo> folderInfo;
-  aFolder->GetDBFolderInfoAndDB(getter_AddRefs(folderInfo), getter_AddRefs(dbToUse));
-
   if (m_curFolderGettingHits != aFolder && m_doingSearch && !m_doingQuickSearch)
   {
     m_curFolderHasCachedHits = false;
@@ -297,11 +293,16 @@ nsMsgXFVirtualFolderDBView::OnSearchHit(nsIMsgDBHdr* aMsgHdr,
   }
 
   bool hdrInCache = false;
-  nsCString searchUri;
   if (!m_doingQuickSearch)
   {
-    m_viewFolder->GetURI(searchUri);
-    dbToUse->HdrIsInCache(searchUri.get(), aMsgHdr, &hdrInCache);
+    nsCOMPtr<nsIMsgDatabase> dbToUse;
+    nsCOMPtr<nsIDBFolderInfo> dummyInfo;
+    nsresult rv = aFolder->GetDBFolderInfoAndDB(getter_AddRefs(dummyInfo), getter_AddRefs(dbToUse));
+    if (NS_SUCCEEDED(rv)) {
+      nsCString searchUri;
+      m_viewFolder->GetURI(searchUri);
+      dbToUse->HdrIsInCache(searchUri.get(), aMsgHdr, &hdrInCache);
+    }
   }
 
   if (!m_doingSearch || !m_curFolderHasCachedHits || !hdrInCache)
